install prettier, lint-staged, husky

--- a/package.json
+++ b/package.json
@@ -23,13 +23,22 @@
     "url": "https://github.com/cat4walking/nodejs_firstProject/issues"
   },
   "homepage": "https://github.com/cat4walking/nodejs_firstProject#readme",
+  "lint-staged": {
+    "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
+  },
+  "husky": {
+    "pre-commit": "lint-staged"
+  },
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "node-sass": "^6.0.0"
   },
   "devDependencies": {
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "prettier": "^2.3.2"
   }
 }
