--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "beauti": "lint-staged",
     "start": "nodemon --inspect src/index.js",
     "watch": "node-sass -w src/resource/scss/ --output src/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -27,7 +28,9 @@
     "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
   },
   "husky": {
-    "pre-commit": "lint-staged"
+    "hook": {
+      "pre-commit": "lint-staged"
+    }
   },
   "dependencies": {
     "express": "^4.17.1",
