--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-handlebars": "^5.3.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.0",
+    "mongoose-delete": "^0.5.3",
     "mongoose-slug-generator": "^1.0.4",
     "node-sass": "^6.0.0"
   },
