--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.13.0",
     "mongoose-delete": "^0.5.3",
+    "mongoose-sequence": "^5.3.1",
     "mongoose-slug-generator": "^1.0.4",
     "node-sass": "^6.0.0"
   },
