--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose-delete": "^0.5.3",
     "mongoose-sequence": "^5.3.1",
     "mongoose-slug-generator": "^1.0.4",
+    "multer": "^1.4.2",
     "node-sass": "^6.0.0"
   },
   "devDependencies": {
