--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "beauti": "lint-staged",
     "start": "nodemon --inspect src/index.js",
-    "watch": "node-sass -w src/resource/scss/ --output src/public/css/",
+    "scss": "node-sass -w src/resource/scss/ --output src/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -31,6 +31,7 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
+    "froala-editor": "^4.0.4",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.0",
     "mongoose-delete": "^0.5.3",
