done make token

--- a/package.json
+++ b/package.json
@@ -29,9 +29,14 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@hapi/joi": "^17.1.1",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "froala-editor": "^4.0.4",
+    "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.0",
     "mongoose-delete": "^0.5.3",
