--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
