--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "beauti": "lint-staged",
     "start": "nodemon --inspect src/index.js",
-    "scss": "node-sass -w src/resource/scss/ --output src/public/css/",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "scss": "node-sass -w src/resource/scss/ --output src/public/css/"
   },
   "repository": {
     "type": "git",
