--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --inspect src/index.js",
+    "start": "nodemon index.js",
     "scss": "node-sass -w src/resource/scss/ --output src/public/css/"
   },
   "repository": {
