--- a/package.json
+++ b/package.json
@@ -42,13 +42,11 @@
     "mongoose-sequence": "^5.3.1",
     "mongoose-slug-generator": "^1.0.4",
     "multer": "^1.4.2",
-    "node-sass": "^6.0.0"
+    "node-sass": "^6.0.0",
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {
-    "husky": "^6.0.0",
-    "lint-staged": "^11.0.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.7",
     "prettier": "^2.3.2"
   }
 }
