--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "froala-editor": "^4.0.4",
+    "http-server": "^13.0.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
