--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
+    "module_name": "^1.0.0",
     "mongoose": "^5.13.0",
     "mongoose-delete": "^0.5.3",
     "mongoose-sequence": "^5.3.1",
