--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "form-data": "^2.3.3",
     "froala-editor": "^4.0.4",
     "http-server": "^13.0.1",
+    "ionic": "^4.1.2",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
@@ -50,6 +51,5 @@
     "multer": "^1.4.2",
     "node-sass": "^6.0.0",
     "nodemon": "^2.0.12"
-  },
-  "devDependencies": {}
+  }
 }
